--- a/main.html
+++ b/main.html
@@ -70,7 +70,7 @@
       <div class="title">Habit Builder</div>
       <div class="habitoption">
         <button onclick="taskList()" class="button">ToDoList</button>
-        <button onclick="stopWatch()" class="button">Study Timer</button>
+        <button onclick="stopWatch()" class="button">FocusTimer</button>
         <button onclick="habitTips()" class="button">Habit Tips</button>
       </div>
     </div>
