--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
       <button class="fbutton" onclick="mainPage()">Try Free</button>
     </div>
     <div>
-      <img class="appstore" src="./assects/playstoreappstore.png" alt="" />
+      <img class="appstore" src="./assects/img/playstoreappstore.png" alt="" />
     </div>
 
     <div class="poster">
-      <img class="postert" src="./assects/habbitposter.png" />
+      <img class="postert" src="./assects/img/habbitposter.png" />
     </div>
 
     <div class="third">
@@ -354,7 +354,7 @@
            <h2 style="font-size: large; font-style: italic; text-decoration: underline;">Take on Monthly Challenges: </h2> <span>Scale the leaderboards and transform habit formation into an exciting and rewarding journey.</h2></span>
         </div>
         <div>
-          <img src="./assects/leadarboard.png" height="400px" width="500px">
+          <img src="./assects/img/leadarboard.png" height="400px" width="500px">
         </div>
       </div>
 
