--- a/main.html
+++ b/main.html
@@ -61,22 +61,64 @@
       }
     }
 
-    .title{
+    .title {
       font-size: 30px;
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-align: center;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
+      text-align: center;
+    }
+
+    .chart1{
+      height: 500px;
+      width: 500px;
+      margin-top: 100px;
+      margin-right: 50px;
+    }
+
+    .chart2{
+      height: 300px;
+      width: 300px;
+      margin-top: 100px;
+      margin-right: 50px;
+    }
+
+    .second{
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+    border: 1px solid black;
+    height: 500px;
+    margin-top: 10px;
+    margin-right: 10px;
+    }
+
+    .main{
+      display: flex;
+      justify-content: space-between;
     }
   </style>
   <body>
+    <div class="main">
     <div class="first">
       <div class="title">Habit Builder</div>
       <div class="habitoption">
         <button onclick="taskList()" class="button">ToDoList</button>
         <button onclick="stopWatch()" class="button">FocusTimer</button>
         <button onclick="habitTips()" class="button">Habit Tips</button>
-        <button onclick="HabitTier()" class="button"> HabitTier List</button>
+        <button onclick="HabitTier()" class="button">HabitTier List</button>
+        <button onclick="leaderBoard()" class="button">leaderboard</button>
       </div>
     </div>
-    <div class="second"></div>
+
+    <div class="second">
+      <div class="chart1">
+        <canvas id="myChart" ></canvas>
+      </div>
+      <div class="chart2">
+        <canvas id="myChart1" ></canvas>
+      </div>
+    </div>
+  </div>
   </body>
   <script>
     function taskList() {
@@ -95,5 +137,54 @@
       location.href = "HabitTier.html";
     }
 
+    function leaderBoard() {
+      location.href = "leaderboard.html";
+    }
+
+    const ctx = document.getElementById("myChart");
+
+    new Chart(ctx, {
+      type: "bar",
+      data: {
+        labels: ["Reading", "Learning", "Writing", "Playing", "Coding", "New skills"],
+        datasets: [
+          {
+            label: "Progress",
+            data: [12, 19, 3, 5, 10, 3],
+            borderWidth: 1,
+          },
+        ],
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true,
+          },
+        },
+      },
+    });
+
+    const ctx1 = document.getElementById("myChart1");
+
+    new Chart(ctx1, {
+      type: "pie",
+      data: {
+        labels: ["Coding", "Cricket", "Swimming", "study", "Logic Building", "Distraction"],
+        datasets: [
+          {
+            label: "Skills",
+            data: [12, 19, 3, 5, 2, 1],
+            borderWidth: 1,
+          },
+        ],
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true,
+          },
+        },
+      },
+    });
   </script>
 </html>
