--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HabitFlow</title>
-  </head>
-
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HabitFlow</title>
   <style>
     body {
-      padding: 0%;
-      margin: 0%;
+      padding: 0;
+      margin: 0;
     }
+
     .name {
       font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
       font-size: larger;
       padding-top: 20px;
     }
+
     .firstsection {
       display: flex;
       padding-right: 20px;
@@ -35,8 +35,7 @@
     }
 
     .title {
-      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       font-size: 55px;
       line-height: 125%;
     }
@@ -44,6 +43,7 @@
     .para {
       font-size: 20px;
     }
+
     .second {
       text-align: center;
       padding-top: 8%;
@@ -55,13 +55,11 @@
       background-color: #405cf5;
       border-radius: 6px;
       border-width: 0;
-      box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
-        rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
+      box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset, rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
       box-sizing: border-box;
       color: #fff;
       cursor: pointer;
-      font-family: -apple-system, system-ui, "Segoe UI", Roboto,
-        "Helvetica Neue", Ubuntu, sans-serif;
+      font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
       font-size: 100%;
       height: 44px;
       line-height: 1.15;
@@ -77,13 +75,11 @@
       user-select: none;
       -webkit-user-select: none;
       touch-action: manipulation;
-      cursor: pointer;
       width: 15%;
     }
+
     .fbutton:focus {
-      box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
-        rgba(50, 50, 93, 0.2) 0 6px 15px 0, rgba(0, 0, 0, 0.1) 0 2px 2px 0,
-        rgba(50, 151, 211, 0.3) 0 0 0 4px;
+      box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset, rgba(50, 50, 93, 0.2) 0 6px 15px 0, rgba(0, 0, 0, 0.1) 0 2px 2px 0, rgba(50, 151, 211, 0.3) 0 0 0 4px;
     }
 
     .appstore {
@@ -105,6 +101,7 @@
       font-weight: 700;
       line-height: 125%;
     }
+
     .tpara {
       font-size: 18px;
       font-family: Inter, sans-serif;
@@ -163,15 +160,11 @@
       font-size: 14px;
       font-weight: bold;
       margin-bottom: 5px;
-      font-size: 18px;
-      line-height: 160%;
     }
 
     .activity-time {
       font-size: 12px;
       color: #555;
-      font-size: 18px;
-      line-height: 160%;
       font-size: small;
     }
 
@@ -186,14 +179,17 @@
     .night .activity {
       border: 1px solid #9c27b0;
     }
+
     .morning {
       background-color: #f3f4f5;
       border: 0.5px solid rgb(201, 200, 200);
     }
+
     .noon {
       background-color: #f9f3f2;
       border: 0.5px solid rgb(201, 200, 200);
     }
+
     .night {
       background-color: #f9eff9;
       border: 0.5px solid rgb(201, 200, 200);
@@ -203,12 +199,13 @@
       width: 1217px;
       height: 600px;
     }
+
     .poster {
       margin-top: 50px;
       padding-left: 50px;
     }
 
-    .challenge{
+    .challenge {
       border-top-right-radius: 100px;
       border-top-left-radius: 100px;
       background-color: rgb(211, 211, 216);
@@ -218,189 +215,269 @@
       border-bottom-right-radius: 80px;
       margin-bottom: 50px;
       padding-bottom: 50px;
+    }
 
+    .tools {
+      text-align: center;
+      margin: 40px;
+    }
+
+    .toolstile {
+      font-size: 36px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    .alltools {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+
+    .rowtools1,
+    .rowtools2 {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .rowtools1 div,
+    .rowtools2 div {
+      border: 1px solid #b6b0b0;
+      width: 300px;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border-radius: 15px;
+      box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      color: #333;
+      margin-bottom: 15px;
+    }
+
+    p {
+      text-align: center;
+      color: #666;
+      font-size: 20px;
+      line-height: 28px;
+    }
+
+    .rowtools1 div:hover,
+    .rowtools2 div:hover {
+      transform: translateY(-5px);
+      box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.2);
+    }
+
+    .maintools{
+      border: 1px solid rgb(215, 214, 214);
+      border-radius: 10px;
+      background-color: rgb(237, 230, 230);
+      padding-bottom: 10px;
     }
   </style>
-  <body>
-    <div class="first">
-      <div class="name">HabitFlow</div>
-      <div class="firstsection">
-        <ul onclick="indexPage()" style="cursor: pointer">
-          Home
-        </ul>
-        <ul onclick="mainPage()" style="cursor: pointer">
-          Try Free
-        </ul>
-        <ul>
-          About
-        </ul>
-        <ul>
-          Blog
-        </ul>
-      </div>
-    </div>
+</head>
 
-    <div class="second">
-      <div class="solgan">
-        <h1 class="title">
-          Flow Into a Better,<br />
-          You with New Habits
-        </h1>
-        <p class="para">
-          Harness the power of our personalized habit tracker app to streamline
-          you're <br />
-          everyday routines and achieve you're goals.
-        </p>
-      </div>
-      <button class="fbutton" onclick="mainPage()">Try Free</button>
+<body>
+  <div class="first">
+    <div class="name">HabitFlow</div>
+    <div class="firstsection">
+      <ul onclick="indexPage()" style="cursor: pointer">
+        Home
+      </ul>
+      <ul onclick="mainPage()" style="cursor: pointer">
+        Try Free
+      </ul>
+      <ul>
+        About
+      </ul>
+      <ul>
+        Blog
+      </ul>
     </div>
+  </div>
+
+  <div class="second">
+    <div class="solgan">
+      <h1 class="title">
+        Flow Into a Better,<br />
+        You with New Habits
+      </h1>
+      <p class="para">
+        Harness the power of our personalized habit tracker app to streamline
+        you're <br />
+        everyday routines and achieve you're goals.
+      </p>
+    </div>
+    <button class="fbutton" onclick="mainPage()">Try Free</button>
+  </div>
+  <div>
+    <img class="appstore" src="./assects/img/playstoreappstore.png" alt="" />
+  </div>
+
+  <div class="poster">
+    <img class="postert" src="./assects/img/habbitposter.png" />
+  </div>
+
+  <div class="third">
     <div>
-      <img class="appstore" src="./assects/img/playstoreappstore.png" alt="" />
+      <img src="https://assets-global.website-files.com/5d3aa39f8474c472841a7dfc/6480ae01528a527a4ce3ff21_target-04.svg" alt="" />
+      <h1 class="tline">Arrange, Implement, Achieve</h1>
+      <p class="tpara">
+        Begin your day with a well-structured, organized plan that keeps you focused on success. <br />
+        Here's an example of how your day with Habitify could unfold:
+      </p>
     </div>
+  </div>
 
-    <div class="poster">
-      <img class="postert" src="./assects/img/habbitposter.png" />
+  <div class="schedule">
+    <div class="section morning">
+      <div class="section-header morning-header">Morning</div>
+      <div class="activity">
+        <div class="activity-title">Run</div>
+        <div class="activity-time">8 AM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Meditate</div>
+        <div class="activity-time">8:30 AM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Plan the day</div>
+        <div class="activity-time">9 AM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Hydrate</div>
+        <div class="activity-time">9.30 AM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Study</div>
+        <div class="activity-time">10 AM</div>
+      </div>
     </div>
+    <div class="section noon">
+      <div class="section-header noon-header">Noon</div>
+      <div class="activity">
+        <div class="activity-title">Healthy Lunch</div>
+        <div class="activity-time">12 PM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Connect with a colleague</div>
+        <div class="activity-time">2 PM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Express gratitude</div>
+        <div class="activity-time">4 PM</div>
+      </div>
+    </div>
+    <div class="section night">
+      <div class="section-header night-header">Night</div>
+      <div class="activity">
+        <div class="activity-title">Reflect</div>
+        <div class="activity-time">8 PM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Wind Down</div>
+        <div class="activity-time">9 PM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Disconnect from screens</div>
+        <div class="activity-time">9:30 PM</div>
+      </div>
+      <div class="activity">
+        <div class="activity-title">Prepare for tomorrow</div>
+        <div class="activity-time">10 PM</div>
+      </div>
+    </div>
+  </div>
 
-    <div class="third">
-      <div>
-        <img
-          src="https://assets-global.website-files.com/5d3aa39f8474c472841a7dfc/6480ae01528a527a4ce3ff21_target-04.svg"
-          alt=""
-        />
-        <h1 class="tline">Arrange, Implement, Achieve</h1>
-        <p class="tpara">
-          Begin your day with a well-structured, organized plan that keeps you
-          focused on success. <br />
-          Here's an example of how your day with Habitify could unfold:
+  <div class="challenge">
+    <div class="leadarboards" style="display: flex; justify-content: space-evenly;">
+      <div class="textboard">
+        <h1 style="font-size: 56px; font-family: sans-serif;">
+          Enhance the Skill <br />
+          with <br />Exciting <span style="color: rgb(161, 145, 124);">Challenges.</span>
+        </h1>
+        <p style="font-size: 18px; font-family: monospace; color: rgb(122, 113, 96);">
+          Engage in friendly competitions and join monthly <br />
+          challenges to transform habit-building into <br />
+          an exciting pursuit.
         </p>
+
+        <h2 style="font-size: large; font-style: italic; text-decoration: underline;">Challenge your friends :</h2>
+        <span>enhance your habit-forming journey with some friendly competition.</span>
+        <h2 style="font-size: large; font-style: italic; text-decoration: underline;">Take on Monthly Challenges: </h2>
+        <span>Scale the leaderboards and transform habit formation into an exciting and rewarding journey.</h2></span>
+      </div>
+      <div>
+        <img src="./assects/img/leadarboard.png" height="400px" width="500px">
       </div>
     </div>
 
-    <div class="schedule">
-      <div class="section morning">
-        <div class="section-header morning-header">Morning</div>
-        <div class="activity">
-          <div class="activity-title">Run</div>
-          <div class="activity-time">8 AM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Meditate</div>
-          <div class="activity-time">8:30 AM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Plan the day</div>
-          <div class="activity-time">9 AM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Hydrate</div>
-          <div class="activity-time">9.30 AM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Study</div>
-          <div class="activity-time">10 AM</div>
-        </div>
-      </div>
-      <div class="section noon">
-        <div class="section-header noon-header">Noon</div>
-        <div class="activity">
-          <div class="activity-title">Healthy Lunch</div>
-          <div class="activity-time">12 PM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Connect with a colleague</div>
-          <div class="activity-time">2 PM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Express gratitude</div>
-          <div class="activity-time">4 PM</div>
-        </div>
-      </div>
-      <div class="section night">
-        <div class="section-header night-header">Night</div>
-        <div class="activity">
-          <div class="activity-title">Reflect</div>
-          <div class="activity-time">8 PM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Wind Down</div>
-          <div class="activity-time">9 PM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Disconnect from screens</div>
-          <div class="activity-time">9:30 PM</div>
-        </div>
-        <div class="activity">
-          <div class="activity-title">Prepare for tomorrow</div>
-          <div class="activity-time">10 PM</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="challenge">
-      <div class="leadarboards" style="display: flex; justify-content: space-evenly;">
-        <div class="textboard">
-          <h1 style="font-size: 56px; font-family: sans-serif;">
-            Enhance the Skill <br />
-            with <br />Exciting <span style="color: rgb(161, 145, 124);">Challenges.</span>
-          </h1>
-          <p style="font-size: 18px; font-family: monospace; color: rgb(122, 113, 96);">
-            Engage in friendly competitions and join monthly <br />
-            challenges to transform habit-building into <br />
-            an exciting pursuit.
-          </p>
-
-          <h2 style="font-size: large; font-style: italic; text-decoration: underline;">Challenge your friends :</h2> <span>enhance your habit-forming journey with some friendly competition.</span>
-           <h2 style="font-size: large; font-style: italic; text-decoration: underline;">Take on Monthly Challenges: </h2> <span>Scale the leaderboards and transform habit formation into an exciting and rewarding journey.</h2></span>
-        </div>
-        <div>
-          <img src="./assects/img/leadarboard.png" height="400px" width="500px">
-        </div>
-      </div>
-
-    </div>
-
-    <div class="tools">
-      <div class="toolstile">Tools for Habit Mastery</div>
   </div>
-  <div class="alltools" style="gap: 5px;">
-      <div class="rowtools1" style="display: flex; justify-content: center; gap: 5px;margin-bottom: 3px;">
-          <div style="border: 1px solid rgb(182, 176, 176); width: 250px;"> <!-- Added width -->
-              <h1 style="text-align: center;">FocusTimer</h1>
-              <p style="text-align: center;">A FocusTimer helps you manage <br>
-              study sessions effectively, <br>
-              promoting productivity through <br>
-              timed intervals and breaks.</p>
-          </div>
-  
-          <div style="border: 1px solid rgb(182, 176, 176); width: 250px;"> <!-- Added width -->
-              <h1 style="text-align: center;">TO-DO List</h1>
-              <p style="text-align: center;">A to-do list helps you organize <br>
-              tasks efficiently, ensuring nothing <br>
-              important is overlooked.</p>
-          </div>
-      </div>
-  
-      <div class="rowtools2" style="display: flex; justify-content: center; gap: 5px;">
-          <div style="border: 1px solid rgb(182, 176, 176); width: 250px;"> <!-- Added width -->
-              <h1 style="text-align: center;">Habit Tips</h1>
-              <p style="text-align: center;">Information to build habit <br>
-              and tips to build you <br>
-              fast habit</p>
-          </div>
-  
-          <div style="border: 1px solid rgb(182, 176, 176); width: 250px;"> <!-- Added width -->
-              <h1 style="text-align: center;">Challenges</h1>
-              <p style="text-align: center;">Overcome challenges by embracing <br>
-              them as opportunities for <br>
-              growth and learning.</p>
-          </div>
-      </div>
-  </div>
-  
-  </body>
 
-  <script>
+  <div class="maintools">
+  <div class="tools">
+    <div class="toolstile">Tools for Habit Mastery</div>
+  </div>
+  <div class="alltools">
+    <div class="rowtools1">
+      <div style="background-color: rgb(200, 229, 229);">
+        <h1>FocusTimer</h1>
+        <p>A FocusTimer helps you manage <br> study sessions effectively, <br> promoting productivity through <br> timed intervals and breaks.</p>
+      </div>
+
+      <div style="background-color: rgb(249, 216, 216);">
+        <h1>TO-DO List</h1>
+        <p>A to-do list helps you organize <br> tasks efficiently, ensuring nothing <br> important is overlooked.</p>
+      </div>
+    </div>
+
+    <div class="rowtools2">
+      <div style="background-color: rgb(231, 241, 209);">
+        <h1>Habit Tips</h1>
+        <p>Information to build habit <br> and tips to build you <br> fast habit</p>
+      </div>
+
+      <div style="background-color: rgb(192, 192, 218);">
+        <h1>Challenges</h1>
+        <p>Overcome challenges by embracing <br> them as opportunities for <br> growth and learning.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div style="display: flex; flex-direction: row; justify-content: space-evenly; align-items:center;background-color:  rgb(52, 47, 47); color: aliceblue; margin-top: 20px; margin-bottom: 10px;">
+  <div>
+      <img src="./assects/img/Habit Flow.png" style="border-radius: 50px;" height="100px" width="100px">
+      <h2 style="font-size: x-small;">@habitflow private limited</h2>
+  </div>
+  <div>
+      <ul>Home</ul>
+      <ul>About</ul>
+      <ul>Careers</ul>
+      <ul>Contact</ul>
+      <ul>Customer Support</ul>
+  </div>
+
+  <div>
+      <ul>Privacy Policy</ul>
+      <ul>Terms of use</ul>
+      <ul>Responsible Disclosure Policy</ul>
+      <ul>Open source</ul>
+  </div>
+
+  <div>
+      <h2 style="margin: 0%; padding-top: 40px;" >Download App</h2>
+      <img src="./assects/img/Google_png (1).png" height="120px">
+  </div>
+</div>
+
+</body>
+
+<script>
     function mainPage() {
       location.href = "main.html";
     }
@@ -408,5 +485,6 @@
     function indexPage() {
       location.href = "index.html";
     }
-  </script>
-</html>
+
+</script>
+  </html>
