add templates section

--- a/main.html
+++ b/main.html
@@ -106,6 +106,7 @@
         <button onclick="stopWatch()" class="button">FocusTimer</button>
         <button onclick="habitTips()" class="button">Habit Tips</button>
         <button onclick="HabitTier()" class="button">HabitTier List</button>
+        <button onclick="templates()" class="button">Templates</button>
         <button onclick="leaderBoard()" class="button">leaderboard</button>
       </div>
     </div>
@@ -139,6 +140,9 @@
 
     function leaderBoard() {
       location.href = "leaderboard.html";
+    }
+    function templates() {
+      location.href = "Templates.html";
     }
 
     const ctx = document.getElementById("myChart");
