--- a/tasklist.html
+++ b/tasklist.html
@@ -123,7 +123,7 @@
 
   <body>
     <div class="points">
-      <img class="coin" src="./assects/coin.png" />
+      <img class="coin" src="./assects/img/coin.png" />
       <span class="point" id="points">0</span>
       <span>pts</span>
     </div>
