--- a/index.html
+++ b/index.html
@@ -278,6 +278,33 @@
       background-color: rgb(237, 230, 230);
       padding-bottom: 10px;
     }
+
+
+
+.image-container img {
+    max-width: 100px;
+    height: auto;
+    margin-bottom: 5px;
+    margin-left: 47%;
+    margin-top: 40px;
+    padding-top: 50px;
+}
+
+.text-container h1 {
+    font-size: 50px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    padding-bottom: 20px;
+}
+
+.text-container p {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.lastbutton{
+  margin-left: 42%;
+}
   </style>
 </head>
 
@@ -413,9 +440,9 @@
       </div>
       <div>
         <img src="./assects/img/leadarboard.png" height="400px" width="500px">
+        
       </div>
     </div>
-
   </div>
 
   <div class="maintools">
@@ -449,7 +476,26 @@
   </div>
 </div>
 
-<div style="display: flex; flex-direction: row; justify-content: space-evenly; align-items:center;background-color:  rgb(52, 47, 47); color: aliceblue; margin-top: 20px; margin-bottom: 10px;">
+<div class="container">
+  <div class="image-container">
+      <img src="https://assets-global.website-files.com/5d3aa39f8474c472841a7dfc/6486c3a1dad77b3e2da701a3_trophy-01.svg" alt="Trophy">
+  </div>
+  <div class="text-container">
+      <h1>Would you like to modify <br> it further or need additional lines?</h1>
+      <p>Whether your aim is to enhance productivity,improve fitness, <br> or form healthier daily habits, Habitify has everything<br> you need to make it happen.</p>
+  </div>
+</div>
+
+<button class="fbutton  lastbutton" onclick="mainPage()">Try Free</button>
+<p style="text-align: center; color: black; font-size: medium;">Or download Habitify on your preferred platform:</p>
+
+<div style="display: flex;justify-content: center; width: 500px; height: 50px; gap: 10px; padding-left: 380px;">
+  <img src="https://assets-global.website-files.com/5d3aa39f8474c472841a7dfc/64831917f8f86e07bd2e82ef_app-store-download%402x.png" alt="">
+   <img src="https://assets-global.website-files.com/5d3aa39f8474c472841a7dfc/64831994dc0f09f22492d93c_mac-app-store-download%402x.png" alt="">
+   <img src="https://assets-global.website-files.com/5d3aa39f8474c472841a7dfc/6483199d4e3f72cc3a832e05_google-play-download%402x.png" alt="">
+
+</div>
+<div style="display: flex; flex-direction: row; justify-content: space-evenly; align-items:center;background-color:  rgb(52, 47, 47); color: aliceblue; margin-top: 100px;">
   <div>
       <img src="./assects/img/Habit Flow.png" style="border-radius: 50px;" height="100px" width="100px">
       <h2 style="font-size: x-small;">@habitflow private limited</h2>
