--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ ul li {
     <div class="about-section">
         <h1>About Me</h1>
         <p>Hi, I'm Atharav Sawant,Aspiring Front-End Developer with a degree in Computer Science from Mumbai University. Skilled in HTML, CSS, and JavaScript, and experienced in creating responsive and user-friendly websites.</p>
-        <p>I have a strong passion for web development and a keen eye for design. I've completed projects that involved converting design mockups into functional web pages, and I'm familiar with version control using Git. Currently learning React and Angular to expand my skill set.</p>
+        <p>I have a strong passion for web development and a keen eye for design. I've completed projects that involved converting design mockups into functional web pages, and I'm familiar with version control using Git. Currently learning React to expand my skill set.</p>
         <p>Looking for an entry-level position where I can contribute to exciting projects and grow as a developer. Let's connect!</p>
         <div class="contact-info">
             <p>LinkedIn: <a href="https://www.linkedin.com/in/atharavsawant" target="_blank">linkedin.com/in/atharavsawant</a></p>
