--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
       <ul onclick="mainPage()" style="cursor: pointer">
         Try Free
       </ul>
-      <ul onclick="aboutSection()">
+      <ul onclick="aboutSection()"  style="cursor: pointer">
         About
       </ul>
-      <ul onclick="blogSection()">
+      <ul onclick="blogSection()"  style="cursor: pointer">
         Blog
       </ul>
     </div>
